--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ plugins {
     id 'war'
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     jcenter()
@@ -22,30 +23,30 @@ dependencies {
 	// ---- TESTING ---------------------------------------------------------------------------------------------
 	
 	// JUnit5-Testing
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
         
 	// Erweiterung: siehe http://joel-costigliola.github.io/assertj/assertj-core-quick-start.html
-	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
 	
 	// Mockito für JUnit 5
-	testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.25.1'
+	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.25.1'
 	
 	// Commons
-	testCompile group: 'com.google.guava', name: 'guava', version: '23.0'
+	testRuntimeOnly group: 'com.google.guava', name: 'guava', version: '23.0'
     
     // JPA Integrationtest
-	testCompile (group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.3') {
+	testImplementation (group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.3') {
 		exclude	group: 'org.eclipse.persistence', module: 'javax.persistence'
 	}
-	testCompile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
-    testRuntime group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+	testImplementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+    testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
     
     // JSON
-	testCompile group: 'javax.json.bind', name: 'javax.json.bind-api', version: '1.0'
-    testCompile group: 'org.eclipse', name: 'yasson', version: '1.0.2'
-    testCompile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
-    testCompile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
+	testImplementation group: 'javax.json.bind', name: 'javax.json.bind-api', version: '1.0'
+    testImplementation group: 'org.eclipse', name: 'yasson', version: '1.0.2'
+    testImplementation  group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
+    testImplementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
     
 }
 
